tests/bad/bad-decr-type.ris
void main():
    let bool a = true;
    a--;
    print a;
    return;